# Runwai

./: .gitignore  CONTRIBUTING.md  LICENSE  Main.lean  README.md  Runwai.lean  Test.lean  lake-manifest.json  lakefile.lean
.github/workflows/: lean_action_ci.yaml
Runwai/: Ast.lean  Command.lean  Env.lean  Eval.lean  Field.lean  Gadget.lean  Json.lean  PP.lean  Parser.lean  PropSemantics.lean  Tactic.lean  Typing.lean
Runwai/Gadget/: Abbrev.lean  EnvLemmas.lean  EvalLemmas.lean  FieldLemmas.lean  Func.lean  PointwisePreserve.lean  TypingLemmas.lean  Utils.lean
Test/: AstTest.lean  CircuitTest.lean  CommandTest.lean  EvalTest.lean  FieldTest.lean  Json.lean  LookupTest.lean
backend/: Cargo.toml
backend/examples/: clk.json  clk.rs  isZero.rs  lookup.json  lookup.rs
backend/src/: air.rs  ast.rs  folder.rs  key.rs  lib.rs  lookup.rs  main.rs  permutation.rs  proof.rs  prover.rs  verify.rs
docs/: AIR.md  Plonky3.md
examples/: IsZero.json  iszero.rwai  lookupU8.rwai
img/: logo.drawio
test/: AstTest.lean  CircuitTest.lean  CommandTest.lean  EvalTest.lean  LookupTest.lean
transpiler/: Cargo.toml  constraints.json
transpiler/src/: main.rs
