[package]
name = "runwai_p3"
version = "2.2.1"
edition = "2021"
authors = ["Koukyosyumei <koukyosyumei@hotmail.com>"]
description = "Runwai"
license = "GPL-3.0"
repository = "https://github.com/Koukyosyumei/Runwai"
keywords = ["formal method", "security", "zero-knowledge-proof", "zkp"]

[[bin]]
name = "runwai_p3"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"