[package]
name = "runwai_p3"
version = "2.2.1"
edition = "2021"
authors = ["Koukyosyumei <koukyosyumei@hotmail.com>"]
description = "Runwai"
license = "GPL-3.0"
repository = "https://github.com/Koukyosyumei/Runwai"
keywords = ["formal method", "security", "zero-knowledge-proof", "zkp"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
rand = { version = "0.9", features = ["small_rng"] }
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"

p3-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3" }
p3-util = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3" }